Revision history for CPAN module Date::Calc::Iterator

1.01 2018-04-13 BRONTO
    - Added support for ISO 8601 format date strings (YYYY-MM-DD or YYYYMMDD)
    - Use Date::Calc's date checking, so YYYY-02-30 will now croak, for example
    - Moved Iterator.pm to lib/Date/Calc/Iterator.pm
    - Put test dependencies in TEST_REQUIRES, if version of EU::MM supports it
    - Specify licence "same as perl" in distribution metadata
    - Specify min perl version 5.006 in metadata
    - Added github repo to dist metadata
    - Added Changes file
    - Dropped META.yml from repo, as it's generated by EU::MM

1.00 2004-03-19 BRONTO
    - First release to CPAN
