@@ -10,6 +10,7 @@ Revision history for CPAN module Date::Calc::Iterator
     - Added github repo to dist metadata
     - Added Changes file
     - Dropped META.yml from repo, as it's generated by EU::MM
+    - Changes in this release were submitted by Neil Bowers.
 
 1.00 2004-03-19 BRONTO
     - First release to CPAN
